# dice-reader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simple.py
RPI/: output.avi  simple.py  template-match.py  test.py
src/: main.cpp
